# YgrPush

./: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py
app/api/: dependencies.py  main.py
app/dashboard/: app.py
app/data/: cleaner.py  component_normalizer.py  data_quality.py  dataset_builder.py  numeric_parser.py  target_loader.py  validator.py
app/database/: ml_storage.py  models.py  repositories.py  source.py
app/features/: batch_features.py  feature_names.py  snapshot_features.py
app/ml/: base.py  baseline.py  bayesian.py  catboost_model.py  ensemble.py  exporter.py  pls.py  prediction_service.py  registry.py  ridge.py  service.py  training_service.py  validation.py
docs/: 00-quick-start.md  01-overview.md  02-business-scenario.md  03-architecture.md  04-data-and-database.md  05-ml-and-training.md  06-api.md  07-cli.md  08-dashboard.md  09-operations.md  10-limitations-and-roadmap.md  11-faq.md  12-api-examples.md  13-diagrams.md  14-scientific-foundation.md  15-experiments-and-reproducibility.md  16-results-and-metrics.md  17-methodology.md  README.md
tests/: test_api_routes.py  test_batch_features.py  test_catboost_support.py  test_cleaner.py  test_cli.py  test_component_normalizer.py  test_database_inspection.py  test_dataset_builder_metadata.py  test_ml_storage.py  test_models_api.py  test_numeric_parser.py  test_prediction_service.py  test_reports_api.py  test_ridge_explain.py  test_snapshot_dataset.py  test_snapshot_features.py  test_validation.py  test_validator.py
(+15 files in other folders)
