[project]
name = "shampoo-quality-forecast"
version = "0.1.0"
description = "MVP системы прогнозирования качества шампуня по технологическим этапам варки."
authors = [
  {name = "Auto Generated", email = "assistant@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<4.0"
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "fastapi>=0.114",
  "uvicorn[standard]>=0.24",
  "sqlalchemy>=2.0",
  "pandas>=2.1",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.4",
  "pydantic>=2.6",
  "pydantic-settings>=2.1",
  "pytest>=8.4",
  "ruff>=0.0.292",
  "mypy>=1.8",
  "streamlit>=1.25",
  "python-dotenv>=1.0"
]
optional-dependencies = { catboost = ["catboost>=1.1"], shap = ["shap>=0.42"] }
[project.urls]
homepage = "https://github.com/SergeysYar/YgrPush"
repository = "https://github.com/SergeysYar/YgrPush"
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = ["py312"]
ignore = ["E501"]

[tool.mypy]
python_version = 3.12
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers"
testpaths = ["tests"]
